[package]
name = "forget_me_not"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.13.2"
wgpu = "0.20.0"
winit = { version = "0.29.0", features = ["rwh_05"] }
log = "0.4.21"
env_logger = "0.11.3"
pollster = "0.3.0"
derived-deref = "2.1.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
crossbeam-queue = "0.3.11"
bevy_reflect = { version = "0.14.2", features = ["glam"] }
regex = "1.10.6"
